# Shogitter.hs

./: .gitignore  README.md  ShogitterHS.cabal  stack.yaml
executables/ai/: Main.hs
executables/command/: Main.hs
executables/example/: Main.hs
src/: Board.hs  Board.hs-boot  Color.hs  Coord.hs  Hands.hs  MArr.hs  Main.hs  OpenPiece.hs  Piece.hs  Rule.hs  Shogi.hs  Shogi.hs-boot
src/Board/: AbilityProxy.hs  Const.hs  Effector.hs  Mover.hs  MoverPredicator.hs  Slicer.hs
src/Coord/: Const.hs
src/Search/: MaterialAlphaBeta.hs
src/Server/: Parser.hs  Server.hs
src/Shogi/: Const.hs  Judge.hs  MoverPredicator.hs
test/: BoardSpec.hs  ColorSpec.hs  CoordSpec.hs  PieceSpec.hs  ShogiSpec.hs
test/Board/: AbilityProxySpec.hs  EffectorSpec.hs  MoverPredicatorSpec.hs  MoverSpec.hs  SlicerSpec.hs
test/Server/: ParserSpec.hs
test/Shogi/: JudgeSpec.hs  MoverPredicatorSpec.hs
