-- TODO: Should generate this with hpack https://github.com/sol/hpack
name:                 ShogitterHS
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               na2hiro
maintainer:           a@81.la
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
-- TODO: enable following option. It's currently too much
--  ghc-options: -Wall
  hs-source-dirs:       src
  exposed-modules:      Color
                      , Coord
                      , Coord.Const
                      , Board
                      , Board.Const
                      , Piece
                      , Shogi
                      , Shogi.Const
                      , Hands
                      , Board.AbilityProxy
                      , Board.Slicer
                      , Board.Mover
                      , Board.Effector
                      , Board.MoverPredicator
                      , Shogi.Judge
                      , Search.MaterialAlphaBeta
                      , Server.Parser
                      , Server.Server
                      , Rule
  build-depends:        base >= 4.7 && < 5
                      , containers >= 0.5.6.2
                      , vector >= 0.11.0.0
                      , game-tree >= 0.1.0.0
                      , aeson >= 1.0.2.0
                      , bytestring >= 0.10.6.0
                      , unordered-containers >= 0.2.7.1
  default-language:     Haskell2010

executable ShogitterHSCommand
  ghc-options: -Wall
  hs-source-dirs: executables/command
  main-is: Main.hs
  build-depends:
    base >= 4.7 && < 5,
    bytestring >= 0.10.6.0,
    ShogitterHS
  default-language:     Haskell2010

-- executable ShogitterHSAI
--   ghc-options: -Wall
--   hs-source-dirs: executables/ai
--   main-is: Main.hs
--   build-depends:
--     base >= 4.7 && < 5,
--     game-tree >= 0.1.0.0,
--     ShogitterHS
--   default-language:     Haskell2010
--
-- executable ShogitterHSExample
--   ghc-options: -Wall
--   hs-source-dirs: executables/example
--   main-is: Main.hs
--   build-depends:
--     base >= 4.7 && < 5,
--     bytestring >= 0.10.6.0,
--     game-tree >= 0.1.0.0,
--     ShogitterHS
--  default-language:     Haskell2010

test-suite ShogitterHS-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base
                      , ShogitterHS
                      , aeson >= 1.0.2.0
                      , hspec >= 2.2.2
                      , bytestring >= 0.10.6.0
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

test-suite ShogitterHS-doctest
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              doctests.hs
  build-depends:        base
                      , doctest >= 0.10.1
  ghc-options:          -threaded -Wall
  default-language:     Haskell2010
